# lit-bit

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROGRESS.md  README.md  ROADMAP.md  Spec.md  justfile
.cargo/: config.toml
.cursor/rules/: cli_tools_reference.mdc  commit_convention.mdc  explicit-naming.mdc  progress_log.mdc  prompts.mdc  research_prompt.mdc  statechart.mdc
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: WORKSPACE_REFACTOR_SUMMARY.md  actor-overview.md  ci_fixes_summary.md  dependency_management.md  index.md  phase-04-completion.md  phase-05-async-implementation-guide.md  test-guide.md
docs/PROGRESS/: 2025-05-21.md  2025-05-22.md  2025-05-23.md  2025-05-24.md  2025-05-25.md  2025-05-26.md  2025-05-27.md  2025-05-28.md  2025-05-29.md  2025-05-30.md  2025-05-31.md  2025-06-02.md  2025-06-03.md  2025-06-04.md  README.md
docs/educational-guides/: phase-05-async-implementation-guide.md
examples/: traffic_light.rs  traffic_light_cortex_m.rs
lit-bit-bench/: Cargo.toml
lit-bit-bench/benches/: actor_mailbox_latency.rs  actor_performance.rs  actor_scaling.rs  async_throughput.rs  main.rs  memory_usage.rs  message_throughput.rs  statechart_throughput.rs  transition_latency.rs
lit-bit-bench/src/: fixtures.rs  lib.rs  metrics.rs  runtime.rs  utils.rs
lit-bit-cli/: Cargo.toml
lit-bit-cli/src/: main.rs
lit-bit-core/: Cargo.toml  build.rs  memory_cortex_m_source.x  memory_riscv_source.x
lit-bit-core/.cargo/: config.toml
lit-bit-core/examples/: README.md  actor_backpressure.rs  actor_calculator.rs  actor_simple_usage.rs  actor_statechart_integration.rs  async_actor_simple.rs  coffee_shop.rs  embassy_actor_simple.rs  external_events.rs  heap_crash.rs  mailbox_patterns.rs  media_player.rs  supervision_and_batching.rs  traffic_light.rs  traffic_light_cortex_m.rs
lit-bit-core/src/: lib.rs  timer.rs
lit-bit-core/src/actor/: address.rs  backpressure.rs  integration.rs  mailbox.rs  mod.rs  panic_handling.rs  spawn.rs  supervision.rs
lit-bit-core/src/core/: mod.rs
lit-bit-core/src/runtime/: mod.rs
lit-bit-core/src/test_utils/: instrumented_actor.rs  mod.rs  probes.rs  test_kit.rs
lit-bit-core/tests/: actor_unit_tests.rs  basic_machine_integration_test.rs  parallel_machine_integration_test.rs
lit-bit-macro/: Cargo.toml
lit-bit-macro/src/: code_generator.rs  lib.rs
lit-bit-macro/tests/: compile_fail_tests.rs
lit-bit-macro/tests/compile-fail/: parallel_region_compound_needs_initial.rs  parallel_state_needs_two_regions.rs  parallel_state_no_initial_self.rs  unknown_target_state.rs  unknown_target_state.stderr
lit-bit-tests/: Cargo.toml
lit-bit-tests/src/: actor_tests.rs  async_tests.rs  integration.rs  lib.rs  property_tests.rs
prompts/: README.md
prompts/analysis/: ROADMAP_OVERVIEW.md
prompts/decomposition/: 00_phase_0_tasks.md  01_phase_1_core_runtime_tasks.md  02_hierarchy_guards_tasks.md
prompts/examples/: api_usage_showcase.md
prompts/phases/00-spec-foundations/: 00_checklist.md
prompts/phases/02-development/: 00_checklist.md
prompts/phases/02-hierarchy-guards/: 02_checklist.md
prompts/project/: PROGRESS.md
prompts/templates/: ROADMAP_PHASE_TEMPLATE.md
prompts/workflows/: RE-ENTRY.md
scripts/: check-progress-log.sh  lint.sh  lint_app.sh
src/: lib.rs  main.rs
src/agent/: mod.rs
src/core/: mod.rs
tests/: agent_tests.rs
xtask/: Cargo.toml
xtask/src/: main.rs
