# Root Cargo.toml for the lit-bit workspace
[workspace]
resolver = "2"
members = ["lit-bit-core", "lit-bit-macro"]

# Shared workspace-level profile settings
[profile.dev]
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
strip = true 
panic = "abort"

# Optional: Default members for commands like `cargo run`

[workspace.package]