# Root Cargo.toml for the lit-bit workspace
[workspace]
resolver = "2"
members = ["lit-bit-core", "lit-bit-macro"]

# Workspace dependencies - centrally managed versions for publishing compatibility
[workspace.dependencies]
lit-bit-macro = { path = "lit-bit-macro", version = "0.1.0" }

# Shared workspace-level profile settings
[profile.dev]
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
strip = true 
panic = "abort"

# Optional: Default members for commands like `cargo run`