[package]
name = "lit-bit-bench"
version = "0.0.1-alpha.0"
edition = "2024"
authors = ["0xjcf <jflores717@gmail.com>"]
description = "Performance benchmarks for lit-bit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xjcf/lit-bit"
publish = false  # Never publish this crate

[dependencies]
lit-bit-core = { workspace = true, features = ["std", "async-tokio"] }
lit-bit-macro = { workspace = true }

# Benchmark dependencies
criterion = { version = "0.5", features = ["html_reports"] }
iai-callgrind = "0.11"

# For async benchmarks
tokio = { version = "1.42", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
futures = "0.3"

# Utilities
anyhow = "1.0"
once_cell = "1.19.0"

[features]
default = []
iai = []

[[bench]]
name = "statechart_throughput"
harness = false

[[bench]]
name = "actor_mailbox_latency"
harness = false

[[bench]]
name = "memory_usage"
harness = false 