[package]
name = "lit-bit-bench"
version = "0.0.1-alpha.0"
edition = "2024"
authors = ["0xjcf <jflores717@gmail.com>"]
description = "Performance benchmarks for lit-bit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xjcf/lit-bit"
publish = false  # Never publish this crate

[dependencies]
lit-bit-core = { workspace = true, features = ["std", "async-tokio"] }
lit-bit-macro = { workspace = true }
futures-lite = "2.6"
parking_lot = "0.12"
num_cpus = "1.17"
tokio = { version = "1.42", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
futures = "0.3"
async-executor = "1.13"
tracing = { version = "0.1", optional = true }
backtrace = { version = "0.3", optional = true }

# Benchmark dependencies
criterion = { version = "0.5", features = ["html_reports", "async"] }

# Utilities
anyhow = "1.0"
once_cell = "1.19.0"
heapless = "0.8"

embassy-executor = { version = "0.7.0", optional = true }
embassy-sync = { version = "0.6.0", optional = true }
embassy-time = { version = "0.4.0", optional = true }

[features]
default = ["async-tokio", "embassy"]  # Enable both runtimes by default
iai = []
async-tokio = []
embassy = ["embassy-executor", "embassy-sync", "embassy-time"]  # Enable Embassy dependencies
runtime-embassy = ["embassy"]  # Alias for embassy feature
profile-alloc = ["tracing", "backtrace"]  # New feature for allocation tracking

[[bench]]
name = "message_throughput"
path = "benches/message_throughput.rs"
harness = false

[[bench]]
name = "statechart_throughput"
harness = false

[[bench]]
name = "actor_mailbox_latency"
harness = false

[[bench]]
name = "memory_usage"
harness = false

[dev-dependencies]
console-subscriber = "0.4.1"
futures-lite = "2.6.0"
jemalloc-ctl = "0.5.4"
parking_lot = "0.12.4"
criterion = { version = "0.5", features = ["html_reports", "async"] }
tokio = { version = "1.42", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
futures = "0.3"
