[package]
name = "lit-bit-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
lit-bit-core = { path = "../lit-bit-core" }

# Badge for crates.io
[badges]
maintenance = { status = "experimental" } 
