[package]
name = "lit-bit-tests"
version = "0.0.1-alpha.0"
edition = "2024"
authors = ["0xjcf <jflores717@gmail.com>"]
description = "Integration and property tests for lit-bit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xjcf/lit-bit"
publish = false  # Never publish this crate

[dependencies]
lit-bit-core = { workspace = true, features = ["std"] }
lit-bit-macro = { workspace = true }

# Test dependencies
proptest = "1.4"
tokio = { version = "1.42", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For async testing
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
# Additional test utilities if needed
once_cell = "1.19.0" 