[package]
name = "lit-bit-tests"
version = "0.0.1-alpha.0"
edition = "2024"
authors = ["0xjcf <jflores717@gmail.com>"]
description = "Integration and property tests for lit-bit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xjcf/lit-bit"
publish = false  # Never publish this crate

[dependencies]
lit-bit-core = { workspace = true }
lit-bit-macro = { workspace = true }
heapless = "0.8.0"

# Test dependencies
proptest = "1.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Optional async dependencies
tokio = { version = "1.42", features = ["macros", "rt", "rt-multi-thread", "sync", "time"], optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }

[features]
# Feature flags for conditional compilation
default = ["async-tokio"]
async-tokio = ["lit-bit-core/async-tokio", "dep:tokio", "dep:futures", "dep:async-trait"]
embassy = ["lit-bit-core/async-embassy"]

[dev-dependencies]
# Additional test utilities if needed
once_cell = "1.19.0" 